<resources>
    <string name="app_name">PruLifeAgentPlanner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="accept">Accept</string>
    <string name="reject">Reject</string>


    <!-- menu items -->
    <string name="pending_requests">Pending Requests</string>

    <string name="requestAccess">Request Access From Manager</string>
    <string name="agent">Agent</string>
    <string name="um">Unit Manager</string>
    <string name="firstName">First Name</string>
    <string name="middleName">Middle Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="branchManager">Branch Manager</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="agentCode">Agent Code</string>
    <string name="password">password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="newPassword">New password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="title_activity_agent_calendar">AgentCalendarActivity</string>
    <string name="teamName">Team</string>
    <string name="summary">Team Summary</string>
    <string name="salesActivity">SALES ACTIVITY</string>
    <string name="tally">TALLY</string>
    <string name="totalPoints">TOTAL POINTS</string>
    <string name="approach">Approach(1pt)</string>
    <string name="appointments">Appointments(2pts)</string>
    <string name="presentation">Presentation(3pts)</string>
    <string name="closedSale">Closed Sale(5pts)</string>
    <string name="referrals">Prospecting(1pt)</string>
    <string name="notes">NOTES</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum feugiat efficitur nisl vel sodales. </string>
    <string name="sync">Sync</string>
    <string name="authFailed">Authentication Failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>