<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mobee.prulifeagentplanner.TeamSummaryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teamName"
                android:id="@+id/teamName"
                android:textSize="20dp"
                android:layout_column="3"
                android:layout_marginBottom="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GKC"
                android:id="@+id/teamTextField"
                android:layout_alignBottom="@+id/teamName"
                android:layout_toRightOf="@+id/summary"
                android:layout_toEndOf="@+id/summary"
                android:textSize="20dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/um"
                android:id="@+id/unitManager"
                android:textSize="20dp"
                android:layout_marginBottom="40dp"
                android:layout_column="3"
                android:layout_below="@+id/teamName"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gilbert K. Chua"
                android:id="@+id/unitManagerTextField"
                android:layout_alignBottom="@+id/unitManager"
                android:layout_alignLeft="@+id/teamTextField"
                android:layout_alignStart="@+id/teamTextField"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:id="@+id/summary"
                android:textSize="20dp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/unitManagerTextField"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />



            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="120dp">

                <!-- HEADER FOR TEAM SUMMARY -->

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:backgroundTint="@color/colorPrimary">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/salesActivity"
                    android:textSize="16dp"
                    android:gravity="left"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tally"
                    android:textSize="16dp"
                    android:gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/totalPoints"
                    android:layout_column="14"
                    android:textSize="16dp"
                    android:gravity="right"
                    android:textStyle="bold"/>

                </TableRow>

                <!-- APPROACH ROW -->

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TableRow>

                        <TextView
                            android:layout_width="111dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/approach"
                            android:textSize="16dp"
                            android:gravity="left"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="14dp"
                            android:gravity="left"
                            android:text="3"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_column="14"
                            android:textSize="14dp"
                            android:gravity="center"
                            android:text="3"/>

                    </TableRow>

                </TableLayout>

                <!-- APPOINTMENTS ROW -->

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <TableRow>

                        <TextView
                            android:layout_width="112dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/appointments"
                            android:textSize="16dp"
                            android:gravity="left"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="14dp"
                            android:gravity="left"
                            android:text="3"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_column="14"
                            android:textSize="14dp"
                            android:gravity="center"
                            android:text="6"/>

                    </TableRow>

                </TableLayout>

                <!-- PRESENTATION ROW -->

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <TableRow>

                        <TextView
                            android:layout_width="112dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/presentation"
                            android:textSize="16dp"
                            android:gravity="left"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="14dp"
                            android:gravity="left"
                            android:text="3"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_column="14"
                            android:textSize="14dp"
                            android:gravity="center"
                            android:text="9"/>

                    </TableRow>

                </TableLayout>

                <!-- CLOSED SALE ROW -->

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <TableRow>

                        <TextView
                            android:layout_width="117dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/closedSale"
                            android:textSize="16dp"
                            android:gravity="left"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="14dp"
                            android:gravity="left"
                            android:text="3"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_column="14"
                            android:textSize="14dp"
                            android:gravity="center"
                            android:text="15"/>

                    </TableRow>

                </TableLayout>

                <!-- PROSPECTING ROW -->

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp">

                    <TableRow>

                        <TextView
                            android:layout_width="117dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/referrals"
                            android:textSize="16dp"
                            android:gravity="left"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="14dp"
                            android:gravity="left"
                            android:text="3"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_column="14"
                            android:textSize="14dp"
                            android:gravity="center"
                            android:text="15"/>

                    </TableRow>

                </TableLayout>

                <!-- TOTAL POINTS    ROW -->

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TableRow>

                        <TextView
                            android:layout_width="117dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/totalPoints"
                            android:textSize="16dp"
                            android:gravity="left"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="14dp"
                            android:gravity="left"
                            android:textStyle="bold"
                            android:text="15"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_column="14"
                            android:textSize="14dp"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:text="48"/>

                    </TableRow>

                </TableLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"
                    android:textSize="16dp"
                    android:layout_marginTop="25dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loremipsum"
                    android:layout_marginTop="10dp"
                    android:textSize="16dp"/>


            </TableLayout>




        </RelativeLayout>

    </ScrollView>




</RelativeLayout>
